bazel_dep(name = "aspect_bazel_lib", version = "2.0.1")
bazel_dep(name = "aspect_rules_esbuild", version = "0.16.0")
bazel_dep(name = "aspect_rules_jest", version = "0.19.6")
bazel_dep(name = "aspect_rules_js", version = "1.34.1")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "rules_java", version = "5.4.0")
bazel_dep(name = "rules_jvm_external", version = "4.5")
bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.26.0")
bazel_dep(name = "rules_oci", version = "1.2.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.fasterxml.jackson.core:jackson-databind:2.13.3",
        "com.google.code.gson:gson:2.8.9",
        "com.google.geometry:s2-geometry:2.0.0",
        "com.google.guava:guava-gwt:32.0.1-jre",
        "com.google.guava:guava:32.1.2-jre",
        "com.google.javascript:closure-compiler-unshaded:jar:v20230228",
        "com.google.truth.extensions:truth-java8-extension:1.1.3",
        "com.google.truth:truth:1.1.3",
        "com.squareup.okhttp3:okhttp:4.10.0",
        "com.wolt.osm:parallelpbf:0.3.1",
        "com.zaxxer:HikariCP:5.0.1",
        "io.javalin:javalin:5.4.2",
        "mil.nga.geopackage:geopackage:6.6.0",
        "mil.nga:sf:2.2.1",
        "mil.nga:tiff:3.0.0",
        "org.apache.commons:commons-text:1.9",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.21",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.6.1",
        "org.junit.jupiter:junit-jupiter:5.8.2",
        "org.locationtech.proj4j:proj4j-epsg:1.3.0",
        "org.locationtech.proj4j:proj4j:1.3.0",
        "org.postgresql:postgresql:42.6.0",
        "org.reflections:reflections:0.10.2",
        "org.sejda.imageio:webp-imageio:0.1.6",
        "org.slf4j:slf4j-simple:2.0.0",
        "org.wololo:flatgeobuf:3.25.0",
        "org.xerial:sqlite-jdbc:3.42.0.0",
    ],
)

use_repo(maven, "maven")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_java",
    digest = "sha256:052076466984fd56979c15a9c3b7433262b0ad9aae55bc0c53d1da8ffdd829c3",
    image = "gcr.io/distroless/java17",
)

use_repo(oci, "distroless_java")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")
