module(
    name = "org_trailcatalog",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.3.1")
archive_override(
    module_name = "aspect_rules_ts",
    integrity = "sha256-ms0Sir53OXUFFI6qaJX67VeDlWDb8hd91iheUSNeJyQ=",
    patches = ["build_defs/bzlmod/aspect_rules_ts.patch"],
    strip_prefix = "rules_ts-3.3.1",
    urls = "https://github.com/aspect-build/rules_ts/archive/refs/tags/v3.3.1.tar.gz",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "rules_java", version = "8.3.2")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_nixpkgs_core", version = "0.12.0")
bazel_dep(name = "rules_nodejs", version = "6.3.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.0.1")
bazel_dep(name = "rules_python", version = "0.38.0")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_nixpkgs_cc")
archive_override(
    module_name = "rules_nixpkgs_cc",
    integrity = "sha256-duH7jyiDeh4i6cWqWMJlfBI6kxwaN2fTgcqg15N6jjA=",
    strip_prefix = "rules_nixpkgs-12b2ee3fab549e7673f2d554c434f6ab1173dbb9/toolchains/cc",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/12b2ee3fab549e7673f2d554c434f6ab1173dbb9.zip",
)
bazel_dep(name = "rules_nixpkgs_java")
archive_override(
    module_name = "rules_nixpkgs_java",
    integrity = "sha256-GtsE3AQWkV/vQndX9CcsT32s7+zu78UPaDrsf36beHo=",
    patches = ["build_defs/bzlmod/nixpkgs_java.patch"],
    strip_prefix = "rules_nixpkgs-0.12.0/toolchains/java",
    urls = "https://github.com/tweag/rules_nixpkgs/releases/download/v0.12.0/rules_nixpkgs-0.12.0.tar.gz",
)

java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(java_toolchains, "remote_java_tools")

non_module_deps = use_extension("//build_defs/bzlmod:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "nixpkgs")
use_repo(non_module_deps, "nixpkgs_config_cc")
use_repo(non_module_deps, "nixpkgs_config_cc_info")
use_repo(non_module_deps, "nixpkgs_config_cc_toolchains")

register_toolchains("@nixpkgs_config_cc_toolchains//:all")

use_repo(non_module_deps, "nixpkgs_java_runtime")
use_repo(non_module_deps, "nixpkgs_java_runtime_toolchain")

register_toolchains("@nixpkgs_java_runtime_toolchain//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.fasterxml.jackson.core:jackson-databind:2.13.3",
        "com.google.code.gson:gson:2.8.9",
        "com.google.geometry:s2-geometry:2.0.0",
        "com.google.guava:guava-gwt:32.0.1-jre",
        "com.google.guava:guava:32.1.2-jre",
        "com.google.javascript:closure-compiler-unshaded:jar:v20230228",
        "com.google.truth.extensions:truth-java8-extension:1.1.3",
        "com.google.truth:truth:1.1.3",
        "com.squareup.okhttp3:okhttp:4.10.0",
        "com.wolt.osm:parallelpbf:0.3.1",
        "com.zaxxer:HikariCP:5.0.1",
        "de.westnordost:osmapi:5.1",
        "io.javalin:javalin:5.4.2",
        "mil.nga.geopackage:geopackage:6.6.0",
        "mil.nga:sf:2.2.1",
        "mil.nga:tiff:3.0.0",
        "org.apache.commons:commons-text:1.9",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.21",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.6.1",
        "org.junit.jupiter:junit-jupiter:5.8.2",
        "org.locationtech.proj4j:proj4j-epsg:1.3.0",
        "org.locationtech.proj4j:proj4j:1.3.0",
        "org.postgresql:postgresql:42.6.0",
        "org.reflections:reflections:0.10.2",
        "org.sejda.imageio:webp-imageio:0.1.6",
        "org.slf4j:slf4j-simple:2.0.0",
        "org.wololo:flatgeobuf:3.25.0",
        "org.xerial:sqlite-jdbc:3.42.0.0",
    ],
)
use_repo(maven, "maven")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "nodejs",
    node_version = "20.14.0",
)
use_repo(node, "nodejs")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:052076466984fd56979c15a9c3b7433262b0ad9aae55bc0c53d1da8ffdd829c3",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "dev_april_corgi")
archive_override(
    module_name = "dev_april_corgi",
    integrity = "sha256-fm5mcGNvitihWiaV+qL2i5G0ci8NLS6d9kZMdiIJ0fY=",
    strip_prefix = "corgi-39e66df503c7434a9c5c2b7f20d2eecb8e47e263",
    urls = "https://github.com/aschleck/corgi/archive/39e66df503c7434a9c5c2b7f20d2eecb8e47e263.tar.gz",
)
