package(default_visibility = ["//java/org/trailcatalog:internal"])

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "hillshader",
    main_class = "org.trailcatalog.importers.elevation.contour.HillshaderKt",
    runtime_deps = [":contour"],
)

java_binary(
    name = "tile_contours",
    main_class = "org.trailcatalog.importers.elevation.contour.TileContoursKt",
    runtime_deps = [":contour"],
)

kt_jvm_library(
    name = "contour",
    srcs = glob(["*.kt"]),
    data = [
        "//java/org/trailcatalog/scrapers:decog",
    ],
    runtime_deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib_jdk8",
        "@maven//:org_sejda_imageio_webp_imageio",
        "@maven//:org_xerial_sqlite_jdbc",
    ],
    deps = [
        "//java/org/trailcatalog/flags",
        "//java/org/trailcatalog/importers/elevation",
        "//third_party/mapbox-vector-tiles:vector_tile_java_proto",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_geometry_s2_geometry",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:org_wololo_flatgeobuf",
    ],
)
